
- 1.48 released -

When sysinst offers a choice of partitioning schemes, anita now uses
the one listed first.  Therefore, i386 and amd64 installs of versions
where sysinst offers GPT as the first choice will use GPT rather than
MBR as was previously the case.

Add support for NetBSD/hppa targets.

Support some upcoming sysinst UI changes.

The structured log file is now flushed after each line so that
it can be used to debug a hung installation without waiting for
it to time out first.

Move the automatic determination of the type of the URL argument
(e.g., distribution directory vs. installation ISO) into a new library
function anita.distribution() so that it can be used not only from the
command line but also by Python programs calling anita as a library.

When using a pre-installed image, "anita install" will now boot it to
let it resize itself, rather than postponing the resize to when the
image is later booted in another mode such as "anita test".

- 1.47 released -

Deal with the removal of the VEXPRESS_A15 kernel, used by the
evbarm-earmv7hf target, in favor of GENERIC.

- 1.46 released -

Add support for NetBSD/evbarm-aarch64 targets.

Add support for NetBSD/sparc64 targets, from Utkarsh Anand.

The run_tests() method now halts the VM, to ensure that the
scratch disk containing ATF test results is flushed by the
guest before being read by the host.

- 1.45 released -

Support xz compressed distribution sets.

Support NetBSD/vax via simh.  Installing and booting works;
running the ATF tests does not.  From Utkarsh Anand.

Mark the NumberedVersion and Release classes as deprecated.

Remove the obsolete clases DailyBuild and LocalBuild.

Fix a bug that caused the guest OS to unnecessarily boot twice
when entering "interact" mode since version 1.43.

Don't send a spurious "x" at the end of installation.

Log the pexpect version.

- 1.44 released -

Disable optimization avoiding copies when installing from a file: URL